--- a/HomeWork 2.3.1/Base.lproj/Main.storyboard
+++ b/HomeWork 2.3.1/Base.lproj/Main.storyboard
@@ -16,30 +16,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CPF-OJ-qFa">
-                                <rect key="frame" x="89" y="244" width="0.0" height="0.0"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="J29-U8-0sn">
-                                <rect key="frame" x="40" y="349" width="310" height="88"/>
+                                <rect key="frame" x="40" y="319" width="310" height="88"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vrJ-7w-dAU">
                                         <rect key="frame" x="0.0" y="0.0" width="310" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="next" textContentType="username"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Ry-Tk-fNE">
                                         <rect key="frame" x="0.0" y="54" width="310" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
                                     </textField>
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1hR-Wo-NHH">
-                                <rect key="frame" x="166" y="457" width="58" height="39"/>
+                                <rect key="frame" x="166" y="427" width="58" height="39"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Log In"/>
@@ -49,7 +42,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="2vz-DQ-6Vv">
-                                <rect key="frame" x="40" y="516" width="310" height="28"/>
+                                <rect key="frame" x="40" y="486" width="310" height="28"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="gGX-xS-I6n">
                                         <rect key="frame" x="0.0" y="0.0" width="118" height="28"/>
@@ -80,7 +73,7 @@
                             <constraint firstItem="2vz-DQ-6Vv" firstAttribute="top" secondItem="1hR-Wo-NHH" secondAttribute="bottom" constant="20" id="HBV-4l-X7Q"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2vz-DQ-6Vv" secondAttribute="trailing" constant="40" id="a8g-Xy-UBO"/>
                             <constraint firstItem="J29-U8-0sn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="enZ-8J-yF6"/>
-                            <constraint firstItem="J29-U8-0sn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-100" id="fuH-98-bkd"/>
+                            <constraint firstItem="J29-U8-0sn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-130" id="fuH-98-bkd"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="J29-U8-0sn" secondAttribute="trailing" constant="40" id="jmW-Xx-qTs"/>
                             <constraint firstItem="2vz-DQ-6Vv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="sKW-tP-fwg"/>
                         </constraints>
@@ -90,7 +83,7 @@
                         <outlet property="forgotPasswordButton" destination="wex-FJ-ZWs" id="9jO-T6-mew"/>
                         <outlet property="forgotUserNameButton" destination="gGX-xS-I6n" id="6Lk-Ik-Z9C"/>
                         <outlet property="logInButton" destination="1hR-Wo-NHH" id="YEq-bH-mDz"/>
-                        <outlet property="passwordTextField" destination="6Ry-Tk-fNE" id="3YY-47-zro"/>
+                        <outlet property="passwordTextField" destination="6Ry-Tk-fNE" id="9OL-wh-rS5"/>
                         <outlet property="userNameTextField" destination="vrJ-7w-dAU" id="DD6-h1-BY3"/>
                     </connections>
                 </viewController>
@@ -141,6 +134,12 @@
                                     <segue destination="EdY-HN-dPh" kind="unwind" unwindAction="unwindFor:sender:" id="lYB-SY-iRb"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Emoji" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RyU-oU-6xg">
+                                <rect key="frame" x="151.66666666666666" y="312.33333333333331" width="87" height="44.666666666666686"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="37"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="zkt-kx-lM2"/>
                         <color key="backgroundColor" systemColor="systemTealColor"/>
@@ -150,10 +149,14 @@
                             <constraint firstItem="Xdy-LD-4Xi" firstAttribute="centerX" secondItem="zkt-kx-lM2" secondAttribute="centerX" id="Mqk-wq-2X5"/>
                             <constraint firstItem="Xdy-LD-4Xi" firstAttribute="top" secondItem="zkt-kx-lM2" secondAttribute="top" constant="136" id="Ugw-5c-IDB"/>
                             <constraint firstItem="zkt-kx-lM2" firstAttribute="bottom" secondItem="zJH-1q-dBM" secondAttribute="bottom" constant="150" id="tSu-PY-RAL"/>
+                            <constraint firstItem="RyU-oU-6xg" firstAttribute="top" secondItem="Xdy-LD-4Xi" secondAttribute="bottom" constant="48.5" id="wvn-gu-Q1M"/>
+                            <constraint firstItem="RyU-oU-6xg" firstAttribute="centerX" secondItem="Xdy-LD-4Xi" secondAttribute="centerX" id="zWm-Ot-jq1"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="jHk-2U-GIi"/>
                     <connections>
+                        <outlet property="backNavigationItem" destination="jHk-2U-GIi" id="zyB-aG-6sj"/>
+                        <outlet property="emojiLabel" destination="RyU-oU-6xg" id="tNB-Rh-OzS"/>
                         <outlet property="welcomeLabel" destination="Xdy-LD-4Xi" id="L9E-Ct-PSN"/>
                     </connections>
                 </viewController>
